unpackaged/main/default/objects/ETT_Tyre_Size_Master__c/ETT_Tyre_Size_Master__c.object-meta.xml
<CustomObject>
    <label>Tyre Size Master</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Tyre Sizes</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tyre Size Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>