unpackaged/main/default/objects/ETT_Tyre_Size_Master__c/fields/ETT_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>ETT_Created_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>