unpackaged/main/default/objects/ETT_Tyre_Size_Master__c/fields/ETT_Description__c.field-meta.xml
<CustomField>
    <fullName>ETT_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>