unpackaged/main/default/objects/ETT_Tyre_Size_Master__c/fields/ETT_Maximum_Price__c.field-meta.xml
<CustomField>
    <fullName>ETT_Maximum_Price__c</fullName>
    <label>Maximum Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>