unpackaged/main/default/objects/ETT_Tyre_Size_Master__c/fields/ETT_Tyre_Number__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Number__c</fullName>
    <displayFormat>TN-{0000}</displayFormat>
    <label>Tyre Number</label>
    <type>AutoNumber</type>
</CustomField>