unpackaged/main/default/objects/ETT_Tyre_Size_Master__c/fields/ETT_Tyre_Size__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Size__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tyre size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>